@@ -26,6 +26,7 @@
 - Fixed infinite loop when using --loopback in case all hashes have been cracked
 - Fixed kernel loops in --increment mode leading to slower performance
 - Fixed mask length check in hybrid attack-modes: Do not include hash-mode dependant mask length checks
+- Fixed display screen to show input queue when using custom charset or rules
 
 ##
 ## Technical
